Tags can now create better copies of themselves.